2009-05-20  Vincent Torri  <doursse at users dot sf dot net>

	reviewed by: Vincent Torri
	patch by: Lance Fetters

	* src/lib/evil_unistd.c:
	make evil_pipe() non blocking

2009-04-18  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Makefile.am:
	put c++ flags in a variable and use gcc when
	linking the Windows CE code.

2009-04-11  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.c:
	* src/lib/evil_fcntl.h:
	support of F_GETFD in fcntl() (does nothing, actually
	needed for last ecore change)

2009-04-08  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdlib.c:
	manage correctly getenv() when value is NULL.

2009-02-22  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_main.c:
	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	Use high resolution timer for gettimeofday() and
	export a convenient function for ecore_time_get(),
	to save some computations.

	* src/lib/evil_pwd.c:
	Use the correct name for GetUserNameEx() according
	to the platform.

2009-02-16  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	replace / by \ in the path passed to fopen

2009-02-01  Vincent Torri  <doursse at users dot sf dot net>

	* doc/Makefile.am:
	* m4/efl_doxygen.m4:
	Missing modification of the variable DOXYGEN to
	efl_doxygen. Spotted by Albin Tonnerre (Lutin).

2009-02-01  Vincent Torri  <doursse at users dot sf dot net>

	* m4/efl_doxygen.m4:
	fix logic in efl_doxygen.m4

2009-01-24  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.c:
	fix fcntl()

2009-01-19  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/Makefile.am:
	* src/bin/evil_suite.c:
	* src/bin/evil_test_dlfcn.c:
	* src/bin/evil_test_dlfcn.h:
	* src/bin/evil_test_environment.c:
	* src/bin/evil_test_environment.h:
	* src/bin/evil_test_gettimeofday.c:
	* src/bin/evil_test_gettimeofday.h:
	* src/bin/evil_test_link.c:
	* src/bin/evil_test_link.h: